fix: overflow-x hidden part

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
 
 body {
   font-family: "Familjen Grotesk", sans-serif;
-  overflow-x: hidden;
 }
 
 button:hover {
